--- a/css/style.less
+++ b/css/style.less
@@ -818,7 +818,7 @@ html.js fieldset.collapsed{
 .recipe-filter{
 	background-color: white;	
 	overflow: hidden;	
-	margin-bottom: 30px;
+	margin-bottom: 50px;
 	text-align: center;
 	clear: both;
 	& .inside-container{
@@ -860,6 +860,7 @@ html.js fieldset.collapsed{
 		&.selected{
 			& .text{
 				font-weight: bold;
+				color: @blue;
 			}
 		}
 		&:hover{
@@ -1662,7 +1663,6 @@ img.monochrome {
 }
 .view-display-id-new_reviews{
   & .white-container{
-    padding-top: 20px;
     margin-bottom: 30px;
   }
 }
@@ -1674,7 +1674,7 @@ img.monochrome {
   font-size: 24px;
   font-weight: bold;
   line-height: 1.33;
-  margin: 30px 0;
+  margin: 20px 0 30px 0;
   position: relative;
   overflow: hidden;
   & span{
