--- a/css/detail.less
+++ b/css/detail.less
@@ -442,12 +442,12 @@
 		position: relative;
 		overflow: hidden;
 		@media @mobile_tablet{
-			min-height: 250px;
+			min-height: 350px;
 			background-color: @grey-text;
 		}
 		@media @smartphone{
 			& img{
-				height: 250px;	    
+				height: 350px;	    
 		    width: initial;
 		    max-width: none;
 		    margin-left: -50%!important;
@@ -652,13 +652,10 @@
 	}
 }
 .article-detail-block{
-	margin: 40px 0 50px 0;
-	padding: 0 80px;
-	@media @mobile{
-		padding: 0px 10px 0;
-	}
+	margin-top: 40px;
+	margin-bottom: 30px;	
 	& .article-text{
-		padding-top: 40px;
+		//padding-top: 40px;
 		& ul{
 			margin-left: 30px;
 		}
@@ -680,11 +677,7 @@
 }
 .article-contact-block{
 	font-size: 18px;
-	margin: 0 0 40px 0;
-	padding: 50px 80px 0;
-	@media @mobile{
-		padding: 20px 10px 0;
-	}
+	margin-top: 50px;
 	& .article-title{
 		font-weight: bold;
 		font-size: 18px;
@@ -705,10 +698,9 @@
 	}
 }
 & .tags-block{
-	margin: 50px 0 70px;
-	padding: 0 170px;
+	margin: 50px auto 70px;
+	text-align: center;	
 	@media @mobile_tablet{
-		padding: 0 0px;
 		margin: 30px 0 30px;
 	}
 	& h5{
@@ -1269,5 +1261,141 @@
 	}
 	& .introduction{
 		.introduction();
+	}
+}
+.media-detail--recipe{
+	margin-bottom: 30px;
+	& .main-photo {
+    position: relateve;
+    border-radius: 4px;    
+    &:after{
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 30%, rgba(0,0,0,.5) 50%, rgba(0,0,0,.2) 80%, rgba(0,0,0,.0));      
+      z-index: 1;
+    } 
+  }
+	& .main-container{
+		color: white;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: calc(~'100% - 30px');
+    z-index: 5;
+    & .category{  
+	    font-weight: normal;
+	    & a, & span{
+	      background-color: @blue;
+	      display: inline-block;
+	      padding: 7px 20px;
+	      border-radius: 30px;
+	    }
+	  }
+	  & .title{
+	  	color: white;
+	  	font-family: @special-font;	
+	    max-width: 600px;
+    	margin: 20px auto 20px;    
+	    font-size: 48px;
+	    line-height: 1.25;	    
+	    @media @mobile{
+	      font-size: 26px;
+	    }	    
+	    & .small{
+	    	color: white;
+	    }
+	  }
+	  & .descr{
+	    font-size: 18px;
+	    max-width: 600px;
+    	margin: 0 auto 20px;
+	  }
+	  & .statistic{
+	    position: static;
+	    & path, & .count{
+	      fill: white;
+	      color: white;
+	    }
+	  }  
+  }  
+}
+.recipe-content{
+	& .cuisine{
+		font-family: @special-font;
+		font-size: 24px;
+		margin : 30px 0;
+		&.cuisine-ingredients{
+			padding-left: 20px;
+			@media @mobile{
+				padding-left: 0;
+			}
+		}
+	}	
+	& .recipe-introduction{
+		font-family: @special-font;
+		font-size: 24px;
+		margin : 30px 0 0 0;
+		line-height: 1.42;
+		color: @middle-text;
+	}
+	& .recipe-ingredients{
+		padding: 20px;
+		border-radius: 4px;
+  	background-color: rgba(36, 184, 209, 0.11);
+  	font-size: 16px;
+	  line-height: 1.75;
+	  & .bold-text{
+	  	color: @blue;
+	  	font-weight: bold;
+	  	margin-bottom: 10px;	
+	  }
+	}
+	& .param {
+  	margin-bottom: 10px;	  
+		& .param__prop {
+		  position: relative;
+			display: block;
+			overflow: hidden;
+			font-weight: bold;
+			&:after {
+			  content: '';
+				position: absolute;
+				margin-left: .3em;
+				bottom: .35em;
+				width: 100%;
+				border-bottom: .1em dotted;
+			}
+		}
+		& .param__value {
+		  float: right;
+			padding-left: .2em;
+		}
+	}
+	& .param--align{
+		&:after {
+			content: '';
+			display: table;
+			clear: both;
+		}
+		& .param__prop {
+			float: left;
+			width: 65%;
+		}
+		& .param__value {
+			float: right;
+			width: 35%;
+			box-sizing: border-box;
+		}
+	}
+	& .recipe-cooking{
+		font-size: 18px;
+	  line-height: 1.56;
+	  & p{
+	  	margin-bottom: 15px;
+	  }
 	}
 }
