--- a/css/detail.less
+++ b/css/detail.less
@@ -655,7 +655,10 @@
 	margin-top: 40px;
 	margin-bottom: 30px;	
 	& .article-text{
-		//padding-top: 40px;
+		
+		&.bordered-top{
+			padding-top: 40px;
+		}
 		& ul{
 			margin-left: 30px;
 		}
@@ -1266,18 +1269,15 @@
 .media-detail--recipe{
 	margin-bottom: 30px;
 	& .main-photo {
-    position: relateve;
+    position: relative;
     border-radius: 4px;    
     &:after{
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 30%, rgba(0,0,0,.5) 50%, rgba(0,0,0,.2) 80%, rgba(0,0,0,.0));      
-      z-index: 1;
-    } 
+    	
+    background: rgba(0,0,0,.2);
+    
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 30%, rgba(0,0,0,.4) 50%, rgba(0,0,0,.2) 80%, rgba(0,0,0,.0));
+      opacity: 1;
+    }  
   }
 	& .main-container{
 		color: white;
@@ -1288,17 +1288,19 @@
     z-index: 5;
     & .category{  
 	    font-weight: normal;
+	    font-size: 14px;
 	    & a, & span{
 	      background-color: @blue;
 	      display: inline-block;
 	      padding: 7px 20px;
 	      border-radius: 30px;
+	      min-width: 170px;
 	    }
 	  }
 	  & .title{
 	  	color: white;
 	  	font-family: @special-font;	
-	    max-width: 600px;
+	    max-width: 800px;
     	margin: 20px auto 20px;    
 	    font-size: 48px;
 	    line-height: 1.25;	    
