--- a/css/header_footer.less
+++ b/css/header_footer.less
@@ -31,7 +31,7 @@
 	}
 	& .mini-logo{
 		display: block;	
-		margin: 25px 0 25px 0px;
+		margin: 25px 0 25px 0px;		
 	}
 	& .topMenu{
 		background: white;
@@ -65,6 +65,9 @@
 		}
 		& .top-logo{
 			margin: -3px 0 0 0;
+		}
+		& .mini-logo{
+			margin: 0;
 		}
 	}		
 	& .main-menu{
