--- a/css/style.less
+++ b/css/style.less
@@ -1839,3 +1839,13 @@ img.monochrome {
   }
 	
 }
+.col-md-offset-4_5{
+	@media (min-width: 992px){
+		margin-left: 37%;
+	}
+}
+.col-md-offset-1_5{
+	@media (min-width: 992px){
+		margin-left: 13%;
+	}
+}
