--- a/css/detail.less
+++ b/css/detail.less
@@ -35,18 +35,26 @@
 	& ul, & ol{
 		padding-left: 30px;
 	}
+	& p{
+		font-size: 18px;
+		line-height: 1.56;
+	}
 	& p, & ul, & ol{
 		margin-top: 10px;
 		margin-bottom: 10px;
-		margin-right: 170px;
-		margin-left: 170px;
+		margin-right: 190px;
+		margin-left: 190px;
 		line-height: 1.62;
 	}
 	& hr{
-		margin-right: 170px;
-		margin-left: 170px;
+		margin-right: 190px;
+		margin-left: 190px;
 	}	
 	& h1, & h2, & h3, & h4, & h5, & h6, & p, & ul, & ol, & hr{
+		@media @medium{
+			margin-left: 150px !important;
+			margin-right: 150px !important;
+		}
 		@media @tablet{
 			margin-left: 20px !important;
 			margin-right: 20px !important;
@@ -57,7 +65,7 @@
 		}
 	}
 	& .article-content-text a{
-		background-color: #f8e81c;
+		background-color: @blue;
 		position: relative;
 		display: inline-block;
 		& strong{
@@ -113,7 +121,8 @@
 				& .tooltip-title{
 					position: absolute;
 					z-index: 20;
-					font-size: 16px;
+					font-size: 18px;
+					font-family: @special-font;
 					text-align: center;
 					top: 50%;
 					transform: translateY(-50%);
@@ -127,39 +136,47 @@
 			}
 		}
 	}
-	& .big-quotation{
-		font-size: 28px;
-	  font-weight: 600;
-	  font-style: italic;
-	  line-height: 1.36;
-	  text-align: center;
-	  color: #000000;
+	& .big-quotation, & q{
+		font-size: 30px;
+  	font-family: @special-font;
+  	line-height: 1.42;
+  	color: #202828;
+		text-align: center;
+	  padding: 58px 15px 58px;
 	  position: relative;
-	  padding: 80px 0 0 0;
-	  max-width: 943px;
-	  margin: 0 auto;
-	  &:after{
-	  	content: '';
-	  	height: 115px;
-	  	width: 160px;
-	  	background-image: url(../img/quotation.svg);
-	  	background-repeat: no-repeat;
-	  	background-size: contain;
-	  	position: absolute;
-	  	left: 50%;
-	  	top: 30px;
-	  	margin-left: -80px;
-	  	z-index: -1;
-	  }
+	  margin: 50px auto;
+	  max-width: 960px;
 	  @media @mobile{
-	  	font-size: 20px;
-	  	padding: 40px 0 0 0;
-	  	&:after{
-	  		height: 75px;
-	  		width: 100px;
-	  		top: 15px;
-	  		margin-left: -50px;
+	  	padding: 38px 15px 48px;
+	  	font-size: 24px;
+	  }
+	  @media (min-width: 768px){
+	    width: 750px;    
+		}
+		@media (min-width: 992px){
+	    width: 960px;
+		}
+	  &:before, &:after{
+	  	content: "";
+	    position: absolute;
+	  	background-image: url(../img/quotation-blue.svg);
+	  	height: 36px;
+	  	width: 54px;
+	  	left: 50%;
+	  	margin-left: -27px;
+	  	@media @mobile{
+	  		height: 18px;
+	  		width: 27px;
+	  		margin-left: -14px;
+	  		background-size: contain;
 	  	}
+	  }
+	  &:before{
+	  	top: 0;
+	  }
+	  &:after{
+			transform: rotate(180deg);
+			bottom: 0;
 	  }
 	}
 	& .big-signature{
@@ -190,38 +207,22 @@
 		margin-bottom: 30px !important;
 		margin-right: 0px !important;
 		margin-left: 0px !important;
+		text-align: center;
 		& img{
 			margin-top: 30px !important;
 			margin-bottom: 0px !important;
-			width: 100% !important;
+			max-width: 960px ;
 			height: auto !important;
+			margin-right: auto !important;
+			margin-left: auto !important;
+			border-radius: 4px;
+			@media @tablet{
+				max-width: 100%;
+			}
+			@media @mobile{
+				max-width: 100%;
+			}
 		}
-	}
-	& q{
-		border-bottom: 1px solid @dark-grey;
-		border-top: 1px solid @dark-grey;
-		background: url(../img/bg-quotation.png) no-repeat left 22px;
-		color: @light-text;
-		display: block;
-		float: right;
-		font-size: 18px;
-		font-style: italic;
-		font-family: @special-font;
-		line-height: 1.3;
-		margin: 10px -50px 10px 20px;
-		padding: 20px 10px 20px 30px;
-		width: 270px;
-		&:after, &:before{
-			display: none;
-		}
-		@media @mobile{
-			margin: 10px 10px 10px 20px;
-			float: none;
-			width: 80%;
-		}	
-		@media @tablet{
-			margin: 10px 10px 10px 20px;
-		}		
 	}
 	& cite{
 		border-bottom: 1px solid @dark-grey;
@@ -368,6 +369,16 @@
 	&--photo{
 		& .article-share-block{
 			margin: -10px 0 10px 0;
+		}
+	}
+	& .photo-gallery{
+		margin-top: 30px;
+		margin-bottom: 30px;
+		& .photo-item{
+			padding: 20px;
+			& img{
+				border-radius: 4px;
+			}
 		}
 	}
 }
@@ -830,7 +841,7 @@
 .bloger-block{
   margin-top: 50px;
   overflow: hidden;
-  width: 165px;
+  width: 150px;
   float: left;
   text-align: right;
   padding-right: 30px;
