--- a/css/style.less
+++ b/css/style.less
@@ -643,8 +643,8 @@ html.js fieldset.collapsed{
 	}
 	& .form-item-when-value-date{
 		& input{
-			background: url(../img/calendar.svg) no-repeat 148px 16px white;
-			background-size: 24px;
+			background: url(../img/calendar.svg) no-repeat 148px 18px white;
+			background-size: 18px 20px;
 			border-color: @grey-fon;
 			border-width: 1px;
 			border-style: solid;
