--- a/css/header_footer.less
+++ b/css/header_footer.less
@@ -65,6 +65,9 @@
 		}
 		& .top-logo{
 			margin: -3px 0 0 0;
+			@media @mobile{
+				margin: 10px auto;
+			}
 		}
 		& .mini-logo{
 			margin: 0;
