--- a/css/media_block.less
+++ b/css/media_block.less
@@ -54,6 +54,8 @@
     }
     & a{
       display: block;
+      height: 100%;
+      width: 100%;
       position: relative;
       &:after {
         content: '';
@@ -62,7 +64,7 @@
         top: 0;
         right: 0;
         left: 0;
-        opacity: 0;
+        //opacity: 0;
         height: 100%;
         width: 100%;
         background: rgba(0,0,0,.2);
@@ -629,15 +631,18 @@
   margin-bottom: 60px;
 }
 .media-wrapper--full .media-block--top3places{
-    margin-bottom: 30px;
-  }
+  margin-bottom: 30px;
+}
+.media-block--top3places .container{
+  cursor: pointer;
+}
 .articles--index.owl-carousel, .affiche-carousel.owl-carousel{
   margin-bottom: 40px;
   overflow: hidden;
   @media @mobile{
     margin-bottom: 20px;
   }
-  & .owl-controls{
+  & .owl-nav{
     position: absolute;
     top: 50%;
     bottom: auto;
@@ -645,7 +650,7 @@
     width: calc(~'100% + 76px');
     margin-left: -38px;
     left: 0;
-    & .owl-nav{
+    
     & div{      
       border-radius: 50%;
       background-color: @blue;      
@@ -690,7 +695,7 @@
         }
       }     
     }
-  }
+  
   }
 }
 .media-block--new-review, .view-cyprus-reviews.view-display-id-new_reviews .media-block--review-page,
@@ -715,6 +720,7 @@
   & .text{
     position: absolute;
     left: 30px;
+    padding-right: 30px;
     bottom: 60px;
     z-index: 20;
     & .descr{
@@ -745,15 +751,21 @@
     & img{
       max-width: none;
     }
-    &:after{
-      content: "";
-      position: absolute;
-      width: 100%;
+    & a{
+      display: block;
       height: 100%;
-      top: 0;
-      left: 0;
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
-      z-index: 10;
+      width: 100%;
+      position: relative;
+      &:after{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
+        z-index: 10;
+      }
     }
   }
 }
@@ -892,16 +904,18 @@
       @media @mobile{
         max-width: 100%;
       }
-      &:after{
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
-        z-index: 10;
-      } 
+      & a{        
+        &:after{
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
+          z-index: 10;
+        } 
+      }      
     }
     & .title{
       font-size: 40px;
@@ -1047,7 +1061,7 @@
     }
   }
   & .photo{
-    &:after{
+    & a:after{
       content: "";
       position: absolute;
       width: 100%;
@@ -1081,6 +1095,7 @@
   & .text{
     position: absolute;
     left: 30px;
+    padding-right: 30px;
     bottom: 60px;
     z-index: 20;
     & .descr{
@@ -1122,7 +1137,7 @@
     height: 100%;
     overflow: hidden;
     z-index: 1;
-    &:after{
+    & a:after{
       content: "";
       position: absolute;
       width: 100%;
@@ -1223,7 +1238,7 @@
     }
   }
   & .photo{
-    &:after{
+    & a:after{
       content: "";
       position: absolute;
       width: 100%;
@@ -1258,11 +1273,10 @@
   & .text{
     position: absolute;
     left: 30px;
+    padding-right: 30px;
     bottom: 60px;
     max-width: 450px;
-    z-index: 20;
-      padding-right: 10px;
-    
+    z-index: 20;  
     & .descr{
       font-size: 18px;
       line-height: 26px;
