pravki ot pashi 2

--- a/css/media_block.less
+++ b/css/media_block.less
@@ -377,6 +377,7 @@
   }
   & .title{
     font-size: 18px;
+    line-height: 23px;
   }
   & .title-wrap{
     height: 70px;
@@ -445,8 +446,8 @@
     display: inline-block;
     color:white;
     position: absolute;
-    top: 40px;
-    left: 34px;
+    top: 30px;
+    left: 30px;
     z-index: 10;
     @media @medium{
       padding: 7px 10px;
@@ -552,6 +553,8 @@
     height: 100%;
     padding-left: 0;
     padding-right: 0;
+    cursor: pointer;
+    width: 100%;
   }
   & .text{
     position: absolute;
@@ -713,9 +716,10 @@
   & .category{
     color: white;
     position: absolute;
-    top: 35px;
-    left: 35px;
+    top: 30px;
+    left: 30px;
     margin-top: 0;
+    z-index: 10;
   }  
   & .text{
     position: absolute;
@@ -816,7 +820,7 @@
         left: 30px;
         bottom: 60px;
         z-index: 20;
-        padding-right: 10px;
+        padding-right: 30px;
       }
       & .text{
         position: relative;
@@ -824,7 +828,7 @@
         width: 100%;
         left: 0;
         bottom: 0;
-      }      
+      }    
     }
   & .photo img{
         height: @new-review-height;
